--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -202,7 +202,7 @@
                         <div class="admininfosect__body">
                             <div class="dashboardinfosect">
                                 <div class="row">
-                                    <div class="col-xxl-3 col-xl-6">
+                                    <div class="col-xxl-3 col-lg-6">
                                         <div class="uplinbox">
                                             <div class="imgwrap">
                                                 <img src="img/admin/linkic5.svg" alt="icon">
@@ -213,7 +213,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-xxl-3 col-xl-6">
+                                    <div class="col-xxl-3 col-lg-6">
                                         <div class="uplinbox">
                                             <div class="imgwrap">
                                                 <img src="img/admin/linkic6.svg" alt="icon">
@@ -224,7 +224,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-xxl-3 col-xl-6">
+                                    <div class="col-xxl-3 col-lg-6">
                                         <div class="uplinbox">
                                             <div class="imgwrap">
                                                 <img src="img/admin/linkic1.svg" alt="icon">
@@ -235,7 +235,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-xxl-3 col-xl-6">
+                                    <div class="col-xxl-3 col-lg-6">
                                         <div class="uplinbox">
                                             <div class="imgwrap">
                                                 <img src="img/admin/linkic7.svg" alt="icon">
@@ -1008,86 +1008,87 @@
                                 <div class="col sbpcol">
                                     <div class="dashboardsection">
                                         <p class="dashboardsection_title">Sales by product</p>
-                                        <table>
-                                            <thead>
-                                                <tr>
-                                                    <th class="sbpcol__prodname">Product name</th>
-                                                    <th class="sbpcol__units">Units</th>
-                                                    <th class="sbpcol__sold">%Sold</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                <tr>
-                                                    <td class="sbpcol__prodname">
-                                                        <div class="ordtabprod">
-                                                            <div class="imgwrap">
-                                                                <img src="img/admin/product1.png" alt="img">
+                                        <div class="tablescroll">
+                                            <table>
+                                                <thead>
+                                                    <tr>
+                                                        <th class="sbpcol__prodname">Product name</th>
+                                                        <th class="sbpcol__units">Units</th>
+                                                        <th class="sbpcol__sold">%Sold</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr>
+                                                        <td class="sbpcol__prodname">
+                                                            <div class="ordtabprod">
+                                                                <div class="imgwrap">
+                                                                    <img src="img/admin/product1.png" alt="img">
+                                                                </div>
+                                                                <p>
+                                                                    Bauli Plumcake "Senza"...
+                                                                </p>
                                                             </div>
-                                                            <p>
-                                                                Bauli Plumcake "Senza"...
-                                                            </p>
-                                                        </div>
-                                                    </td>
-                                                    <td class="sbpcol__units">9</td>
-                                                    <td class="sbpcol__sold">
-                                                        30%
-                                                        <img src="img/admin/soldtop.svg" alt="img">
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="sbpcol__prodname">
-                                                        <div class="ordtabprod">
-                                                            <div class="imgwrap">
-                                                                <img src="img/admin/product2.png" alt="img">
+                                                        </td>
+                                                        <td class="sbpcol__units">9</td>
+                                                        <td class="sbpcol__sold">
+                                                            30%
+                                                            <img src="img/admin/soldtop.svg" alt="img">
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td class="sbpcol__prodname">
+                                                            <div class="ordtabprod">
+                                                                <div class="imgwrap">
+                                                                    <img src="img/admin/product2.png" alt="img">
+                                                                </div>
+                                                                <p>
+                                                                    Céréal Apricot
+                                                                </p>
                                                             </div>
-                                                            <p>
-                                                                Céréal Apricot
-                                                            </p>
-                                                        </div>
-                                                    </td>
-                                                    <td class="sbpcol__units">6</td>
-                                                    <td class="sbpcol__sold">
-                                                        150%
-                                                        <img src="img/admin/soldtop.svg" alt="img">
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="sbpcol__prodname">
-                                                        <div class="ordtabprod">
-                                                            <div class="imgwrap">
-                                                                <img src="img/admin/product3.png" alt="img">
+                                                        </td>
+                                                        <td class="sbpcol__units">6</td>
+                                                        <td class="sbpcol__sold">
+                                                            150%
+                                                            <img src="img/admin/soldtop.svg" alt="img">
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td class="sbpcol__prodname">
+                                                            <div class="ordtabprod">
+                                                                <div class="imgwrap">
+                                                                    <img src="img/admin/product3.png" alt="img">
+                                                                </div>
+                                                                <p>
+                                                                    Musclefit Protein Pancake
+                                                                </p>
                                                             </div>
-                                                            <p>
-                                                                Musclefit Protein Pancake
-                                                            </p>
-                                                        </div>
-                                                    </td>
-                                                    <td class="sbpcol__units">4</td>
-                                                    <td class="sbpcol__sold">
-                                                        50%
-                                                        <img src="img/admin/soldtop.svg" alt="img">
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="sbpcol__prodname">
-                                                        <div class="ordtabprod">
-                                                            <div class="imgwrap">
-                                                                <img src="img/admin/product4.png" alt="img">
+                                                        </td>
+                                                        <td class="sbpcol__units">4</td>
+                                                        <td class="sbpcol__sold">
+                                                            50%
+                                                            <img src="img/admin/soldtop.svg" alt="img">
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td class="sbpcol__prodname">
+                                                            <div class="ordtabprod">
+                                                                <div class="imgwrap">
+                                                                    <img src="img/admin/product4.png" alt="img">
+                                                                </div>
+                                                                <p>
+                                                                    Pesoforma Porridge Cacao
+                                                                </p>
                                                             </div>
-                                                            <p>
-                                                                Pesoforma Porridge Cacao
-                                                            </p>
-                                                        </div>
-                                                    </td>
-                                                    <td class="sbpcol__units">10</td>
-                                                    <td class="sbpcol__sold">
-                                                        300%
-                                                        <img src="img/admin/soldbott.svg" alt="img">
-                                                    </td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-
+                                                        </td>
+                                                        <td class="sbpcol__units">10</td>
+                                                        <td class="sbpcol__sold">
+                                                            300%
+                                                            <img src="img/admin/soldbott.svg" alt="img">
+                                                        </td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="col topcustcol">
@@ -1167,7 +1168,6 @@
             </div>
         </div>
     </main>
-
 
     <script src="js/lib/jquery.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
