--- a/seller-acc-add-promotion.html
+++ b/seller-acc-add-promotion.html
@@ -82,9 +82,23 @@
                                                 Products list
                                             </a>
                                             <ul class="sellacc__sublist">
-                                                <li><a href="#">Categories</a></li>
-                                                <li><a href="#">Categories </a></li>
-                                                <li><a href="#">Deleted items</a></li>
+                                                <li>
+                                                    <a href="#" class="sellacc__sublink">Categories</a>
+                                                    <ul>
+                                                        <li><a href="#">Subcategory</a></li>
+                                                        <li><a href="#">Subcategory</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li>
+                                                    <a href="#" class="sellacc__sublink">Categories </a>
+                                                    <ul>
+                                                        <li><a href="#">Subcategory</a></li>
+                                                        <li><a href="#">Subcategory</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li>
+                                                    <a href="#">Deleted items</a>
+                                                </li>
                                             </ul>
                                         </li>
                                         <li>
@@ -379,75 +393,6 @@
             </div>
         </div>
     </footer>
-
-
-    <!-- Add position -->
-    <div class="modal fade generalmodal" id="addposition" tabindex="-1" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="productdetails addposition">
-                    <div class="closedetails" data-bs-dismiss="modal" aria-label="Close">
-                        <img src="img/account/close.svg" alt="close">
-                    </div>
-                    <p class="title">Add position</p>
-                    <div class="addposition__search">
-                        <div class="searchblock">
-                            <input type="text" placeholder="Search by product...">
-                            <button><img src="img/header/search-icon.svg" alt="search"></button>
-                        </div>
-                    </div>
-                    <div class="addposition__products">
-                        <div class="addposition__product">
-                            <input type="checkbox" id="pr1">
-                            <label for="pr1">
-                                <div class="addposition__product-check">
-                                    <span></span>
-                                </div>
-                                <div class="addposition__product-img">
-                                    <div class="imgwrap">
-                                        <img src="img/selleracc/table-product7.png" alt="img">
-                                    </div>
-                                </div>
-                                <div class="addposition__product-descr">
-                                    <p class="title">Light - With low carbohydrates - Fruit Carb Fitness SyrupMax...</p>
-                                    <p>Weight: 0.45 kg</p>
-                                </div>
-                            </label>
-                        </div>
-                        <div class="addposition__product">
-                            <input type="checkbox" id="pr2">
-                            <label for="pr2">
-                                <div class="addposition__product-check">
-                                    <span></span>
-                                </div>
-                                <div class="addposition__product-img">
-                                    <div class="imgwrap">
-                                        <img src="img/selleracc/table-product2.png" alt="img">
-                                    </div>
-                                </div>
-                                <div class="addposition__product-descr">
-                                    <p class="title">Céréal Apricot Tart, Gluten Free, Lactose Free</p>
-                                    <p>Weight: 0.45 kg</p>
-                                </div>
-                            </label>
-                        </div>
-
-
-
-
-
-
-                    </div>
-                    <div class="d-flex justify-content-end">
-                        <a href="#" class="greenbtn">Add selected item</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
 
 
 
