--- a/seller-acc-delete-items.html
+++ b/seller-acc-delete-items.html
@@ -81,10 +81,24 @@
                                                 </span>
                                                 Products list
                                             </a>
-                                            <ul class="sellacc__sublist"  style="display: block;">
-                                                <li><a href="#">Categories</a></li>
-                                                <li><a href="#">Categories </a></li>
-                                                <li class="active"><a href="#">Deleted items</a></li>
+                                            <ul class="sellacc__sublist">
+                                                <li>
+                                                    <a href="#" class="sellacc__sublink">Categories</a>
+                                                    <ul>
+                                                        <li><a href="#">Subcategory</a></li>
+                                                        <li><a href="#">Subcategory</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li>
+                                                    <a href="#" class="sellacc__sublink">Categories </a>
+                                                    <ul>
+                                                        <li><a href="#">Subcategory</a></li>
+                                                        <li><a href="#">Subcategory</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li>
+                                                    <a href="#">Deleted items</a>
+                                                </li>
                                             </ul>
                                         </li>
                                         <li>
@@ -471,6 +485,7 @@
         </div>
     </footer>
 
+
     <!-- Modal -->
     <div class="modal fade generalmodal largemodal" id="proddetails" tabindex="-1" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
@@ -706,6 +721,22 @@
             </div>
         </div>
     </div>
+
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
