--- a/seller-acc-profile-settings.html
+++ b/seller-acc-profile-settings.html
@@ -82,9 +82,23 @@
                                                 Products list
                                             </a>
                                             <ul class="sellacc__sublist">
-                                                <li><a href="#">Categories</a></li>
-                                                <li><a href="#">Categories </a></li>
-                                                <li><a href="#">Deleted items</a></li>
+                                                <li>
+                                                    <a href="#" class="sellacc__sublink">Categories</a>
+                                                    <ul>
+                                                        <li><a href="#">Subcategory</a></li>
+                                                        <li><a href="#">Subcategory</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li>
+                                                    <a href="#" class="sellacc__sublink">Categories </a>
+                                                    <ul>
+                                                        <li><a href="#">Subcategory</a></li>
+                                                        <li><a href="#">Subcategory</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li>
+                                                    <a href="#">Deleted items</a>
+                                                </li>
                                             </ul>
                                         </li>
                                         <li>
@@ -549,7 +563,6 @@
         </div>
     </footer>
 
-
     <!-- Sign OUt -->
     <div class="modal fade small" id="signout" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
@@ -566,11 +579,6 @@
             </div>
         </div>
     </div>
-
-
-
-
-
 
 
 
