--- a/seller-acc-coupon-create.html
+++ b/seller-acc-coupon-create.html
@@ -82,9 +82,23 @@
                                                 Products list
                                             </a>
                                             <ul class="sellacc__sublist">
-                                                <li><a href="#">Categories</a></li>
-                                                <li><a href="#">Categories </a></li>
-                                                <li><a href="#">Deleted items</a></li>
+                                                <li>
+                                                    <a href="#" class="sellacc__sublink">Categories</a>
+                                                    <ul>
+                                                        <li><a href="#">Subcategory</a></li>
+                                                        <li><a href="#">Subcategory</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li>
+                                                    <a href="#" class="sellacc__sublink">Categories </a>
+                                                    <ul>
+                                                        <li><a href="#">Subcategory</a></li>
+                                                        <li><a href="#">Subcategory</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li>
+                                                    <a href="#">Deleted items</a>
+                                                </li>
                                             </ul>
                                         </li>
                                         <li>
@@ -461,7 +475,6 @@
             </div>
         </div>
     </div>
-
 
 
     <script src="js/lib/jquery.js"></script>
