--- a/seller-acc-product-list.html
+++ b/seller-acc-product-list.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/lib/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/lib/swiper.css">
-    <link rel="stylesheet" href="css/lib/sortable.min.css">
+    <!-- <link rel="stylesheet" href="css/lib/sortable.min.css"> -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -178,7 +178,7 @@
                                         <a href="#">At a discount</a>
                                         <a href="#">Hidden</a>
                                     </div>
-                                    <div class="recentorder-filter recentorder-filter__seller">
+                                    <!-- <div class="recentorder-filter recentorder-filter__seller">
                                         <div class="leftsect">
                                             <div class="generalselect">
                                                 <select class="customselect" name="Filter">
@@ -195,7 +195,7 @@
                                                 <button><img src="img/header/search-icon.svg" alt="search"></button>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <div class="prodlist-selectbox">
                                         <p>Select: 0</p>
                                         <div class="prodlist-selectboxbtn">
@@ -211,23 +211,24 @@
                                             <label for="seldel">Delete</label>
                                         </div>
                                     </div>
-                                    <div class="sellertable">
-                                        <table class="table sortable">
+
+                                    <div class="datatablewrapper sellertable">
+                                        <table id="example" class="table datatable">
                                             <thead>
                                                 <tr>
-                                                    <th class="check no-sort">
+                                                    <th>
                                                         <div class="tablecheckbox">
                                                             <input type="checkbox" id="selectall">
                                                             <label for="selectall"></label>
                                                         </div>
                                                     </th>
-                                                    <th class="name">Name</th>
-                                                    <th class="date">Date</th>
-                                                    <th class="code">Code</th>
-                                                    <th class="display">Display</th>
-                                                    <th class="price">Price</th>
-                                                    <th class="qty">Qty.</th>
-                                                    <th class="pricetot">Price</th>
+                                                    <th>Name</th>
+                                                    <th>Date</th>
+                                                    <th>Code</th>
+                                                    <th>Display</th>
+                                                    <th>Price</th>
+                                                    <th>Qty.</th>
+                                                    <th>Price</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
@@ -296,7 +297,7 @@
                                                         </div>
                                                     </td>
                                                     <td class="date">
-                                                        <span>05.28.23</span>
+                                                        <span>05.22.23</span>
                                                         <button class="editdate"><img src="img/selleracc/edit.svg"
                                                                 alt="edit"></button>
                                                     </td>
@@ -345,8 +346,8 @@
                                                 <tr>
                                                     <td class="check">
                                                         <div class="tablecheckbox">
-                                                            <input type="checkbox" id="check4">
-                                                            <label for="check4"></label>
+                                                            <input type="checkbox" id="check5">
+                                                            <label for="check5"></label>
                                                         </div>
                                                     </td>
                                                     <td class="name">
@@ -372,7 +373,6 @@
                                                     <td class="display">Published</td>
                                                     <td class="price">
                                                         $ 17.00
-                                                        <span>$ 22.10</span>
                                                     </td>
                                                     <td class="qty">15</td>
                                                     <td class="pricetot">$ 255.00</td>
@@ -380,8 +380,8 @@
                                                 <tr>
                                                     <td class="check">
                                                         <div class="tablecheckbox">
-                                                            <input type="checkbox" id="check5">
-                                                            <label for="check5"></label>
+                                                            <input type="checkbox" id="check6">
+                                                            <label for="check6"></label>
                                                         </div>
                                                     </td>
                                                     <td class="name">
@@ -414,8 +414,8 @@
                                                 <tr>
                                                     <td class="check">
                                                         <div class="tablecheckbox">
-                                                            <input type="checkbox" id="check6">
-                                                            <label for="check6"></label>
+                                                            <input type="checkbox" id="check7">
+                                                            <label for="check7"></label>
                                                         </div>
                                                     </td>
                                                     <td class="name">
@@ -433,7 +433,7 @@
                                                         </div>
                                                     </td>
                                                     <td class="date">
-                                                        <span>05.14.23</span>
+                                                        <span>05.28.23</span>
                                                         <button class="editdate"><img src="img/selleracc/edit.svg"
                                                                 alt="edit"></button>
                                                     </td>
@@ -449,19 +449,7 @@
                                         </table>
                                     </div>
 
-                                    <div class="pagination">
-                                        <ul>
-                                            <li><a href="#"><img src="img/general/pagination-prev.svg" alt="prev"></a>
-                                            </li>
-                                            <li><a href="#">1</a></li>
-                                            <li class="active"><a href="#">2</a></li>
-                                            <li><a href="#">3</a></li>
-                                            <li>...</li>
-                                            <li><a href="#">11</a></li>
-                                            <li><a href="#"><img src="img/general/pagination-next.svg" alt="next"></a>
-                                            </li>
-                                        </ul>
-                                    </div>
+
                                 </div>
                             </div>
 
@@ -759,11 +747,14 @@
     </div>
 
 
+
     <script src="js/lib/jquery.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="js/lib/swiper.js"></script>
-    <script src="js/lib/sortable.min.js"></script>
+    <!-- <script src="js/lib/sortable.min.js"></script> -->
     <script src="js/lib/bootstrap.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
     <script src="js/common.js"></script>
 </body>
 
