--- a/seller-acc-reports.html
+++ b/seller-acc-reports.html
@@ -169,7 +169,7 @@
                                 <div class="acccontentsect__body">
                                     <div class="reports-topfilter">
                                         <div class="row">
-                                            <div class="col-xxl-3">
+                                            <div class="col-xxl-3 col-lg-6">
                                                 <div class="salestatistics__dates">
                                                     <div class="form-group-zeus">
                                                         <div class="input-group-zeus input-group-zeus--icon-append">
@@ -184,13 +184,13 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="col-xxl-3">
+                                            <div class="col-xxl-3  col-lg-6">
                                                 <div class="today-yesterday">
                                                     <a href="#">Today</a>
                                                     <a href="#">Yesterday</a>
                                                 </div>
                                             </div>
-                                            <div class="col-xxl-6">
+                                            <div class="col-xxl-6  col-xl-12">
                                                 <a href="#" class="comparedbtn">Compared to the previous period</a>
                                             </div>
                                         </div>
@@ -198,7 +198,7 @@
 
                                     <div class="dashboardinfosect">
                                         <div class="row">
-                                            <div class="col-xxl-3 col-lg-6">
+                                            <div class="col-xxl-3 col-sm-6">
                                                 <div class="uplinbox">
                                                     <div class="imgwrap">
                                                         <img src="img/admin/linkic5.svg" alt="icon">
@@ -209,7 +209,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="col-xxl-3 col-lg-6">
+                                            <div class="col-xxl-3 col-sm-6">
                                                 <div class="uplinbox">
                                                     <div class="imgwrap">
                                                         <img src="img/admin/linkic7.svg" alt="icon">
@@ -220,7 +220,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="col-xxl-3 col-lg-6">
+                                            <div class="col-xxl-3 col-sm-6">
                                                 <div class="uplinbox">
                                                     <div class="imgwrap">
                                                         <img src="img/selleracc/linkic8.svg" alt="icon">
@@ -231,7 +231,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="col-xxl-3 col-lg-6">
+                                            <div class="col-xxl-3 col-sm-6">
                                                 <div class="uplinbox">
                                                     <div class="imgwrap">
                                                         <img src="img/admin/linkic1.svg" alt="icon">
@@ -522,39 +522,154 @@
                                                     </tbody>
                                                 </table>
                                             </div>
-
-                                            <div class="row">
-                                                
-                                                
-                                            </div>
-
                                         </div>
+
+
                                     </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+                                    <div class="row">
+                                        <div class="col repsalespr">
+                                            <div class="dashboardsection">
+                                                <p class="dashboardsection_title">Sales by product</p>
+                                                <div class="tablescroll">
+                                                    <table>
+                                                        <thead>
+                                                            <tr>
+                                                                <th class="sbpcol__prodname">Product name</th>
+                                                                <th class="sbpcol__units">Units</th>
+                                                                <th class="sbpcol__sold">%Sold</th>
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                            <tr>
+                                                                <td class="sbpcol__prodname">
+                                                                    <div class="ordtabprod">
+                                                                        <div class="imgwrap">
+                                                                            <img src="img/admin/product1.png" alt="img">
+                                                                        </div>
+                                                                        <p>
+                                                                            Bauli Plumcake
+                                                                        </p>
+                                                                    </div>
+                                                                </td>
+                                                                <td class="sbpcol__units">9</td>
+                                                                <td class="sbpcol__sold">
+                                                                    30%
+                                                                    <img src="img/admin/soldtop.svg" alt="img">
+                                                                </td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td class="sbpcol__prodname">
+                                                                    <div class="ordtabprod">
+                                                                        <div class="imgwrap">
+                                                                            <img src="img/admin/product2.png" alt="img">
+                                                                        </div>
+                                                                        <p>
+                                                                            Céréal Apricot
+                                                                        </p>
+                                                                    </div>
+                                                                </td>
+                                                                <td class="sbpcol__units">6</td>
+                                                                <td class="sbpcol__sold">
+                                                                    150%
+                                                                    <img src="img/admin/soldtop.svg" alt="img">
+                                                                </td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td class="sbpcol__prodname">
+                                                                    <div class="ordtabprod">
+                                                                        <div class="imgwrap">
+                                                                            <img src="img/admin/product3.png" alt="img">
+                                                                        </div>
+                                                                        <p>
+                                                                            Musclefit Protein
+                                                                        </p>
+                                                                    </div>
+                                                                </td>
+                                                                <td class="sbpcol__units">4</td>
+                                                                <td class="sbpcol__sold">
+                                                                    50%
+                                                                    <img src="img/admin/soldtop.svg" alt="img">
+                                                                </td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td class="sbpcol__prodname">
+                                                                    <div class="ordtabprod">
+                                                                        <div class="imgwrap">
+                                                                            <img src="img/admin/product4.png" alt="img">
+                                                                        </div>
+                                                                        <p>
+                                                                            Pesoforma Porridge
+                                                                        </p>
+                                                                    </div>
+                                                                </td>
+                                                                <td class="sbpcol__units">10</td>
+                                                                <td class="sbpcol__sold">
+                                                                    300%
+                                                                    <img src="img/admin/soldbott.svg" alt="img">
+                                                                </td>
+                                                            </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col repbestitems">
+                                            <div class="dashboardsection">
+                                                <p class="dashboardsection_title">Best Items - by Sales</p>
+                                                <div class="bestitems-wrap">
+                                                    <div class="bestitemsrow">
+                                                        <div class="imgwrap">
+                                                            <img src="img/category/categori-pr9.png" alt="product">
+                                                        </div>
+                                                        <div class="descr">
+                                                            <p class="title">Bauli Plumcake</p>
+                                                            <p>
+                                                                Fusce mollis porttitor turpis quis fringilla. Curabitur
+                                                                vel nulla dolor. Nam a erat non.
+                                                            </p>
+                                                            <p class="price">$55</p>
+                                                        </div>
+                                                        <div class="sales">
+                                                            <p>54 Sales</p>
+                                                        </div>
+                                                    </div>
+                                                    <div class="bestitemsrow">
+                                                        <div class="imgwrap">
+                                                            <img src="img/category/categori-pr8.png" alt="product">
+                                                        </div>
+                                                        <div class="descr">
+                                                            <p class="title">Musclefit Protein</p>
+                                                            <p>
+                                                                Praesent volutpat metus vitae dapibus sagittis.
+                                                                Curabitur commodo sed quam
+                                                            </p>
+                                                            <p class="price">$43</p>
+                                                        </div>
+                                                        <div class="sales">
+                                                            <p>44 Sales</p>
+                                                        </div>
+                                                    </div>
+                                                    <div class="bestitemsrow">
+                                                        <div class="imgwrap">
+                                                            <img src="img/category/categori-pr7.png" alt="product">
+                                                        </div>
+                                                        <div class="descr">
+                                                            <p class="title">Pesoforma Porridge</p>
+                                                            <p>
+                                                                Sed massa lectus, suscipit non posuere a, malesuada eu
+                                                                nibh.
+                                                            </p>
+                                                            <p class="price">$77</p>
+                                                        </div>
+                                                        <div class="sales">
+                                                            <p>34 Sales</p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
 
                                 </div>
                             </div>
@@ -633,8 +748,6 @@
             </div>
         </div>
     </footer>
-
-
 
 
 
