--- a/admin-all-customers-userprofile.html
+++ b/admin-all-customers-userprofile.html
@@ -61,6 +61,7 @@
                                 <li><a href="#">All Selers</a></li>
                                 <li><a href="#">Need to be approved</a></li>
                                 <li><a href="#">Whale sellers</a></li>
+                                <li><a href="#">Categories</a></li>
                             </ul>
                         </li>
                         <li>
@@ -452,6 +453,9 @@
                     </div>
                 </div>
             </div>
+
+            <img class="admbgel1" src="img/background-elements/bgelem9.png" alt="img">
+            <img class="admbgel2" src="img/background-elements/bgelem5.png" alt="img">
         </div>
 
     </main>
