--- a/admin-sales-by-sellers.html
+++ b/admin-sales-by-sellers.html
@@ -100,7 +100,6 @@
                     </ul>
                 </div>
             </aside>
-
             <div class="admincontent">
                 <div class="admincontent__head">
                     <div class="searchblock">
@@ -394,6 +393,9 @@
                     </div>
                 </div>
             </div>
+
+            <img class="admbgel1" src="img/background-elements/bgelem9.png" alt="img">
+            <img class="admbgel2" src="img/background-elements/bgelem5.png" alt="img">
         </div>
     </main>
 
