--- a/admin-seller-account-addcategory.html
+++ b/admin-seller-account-addcategory.html
@@ -276,6 +276,9 @@
                     </div>
                 </div>
             </div>
+
+            <img class="admbgel1" src="img/background-elements/bgelem9.png" alt="img">
+            <img class="admbgel2" src="img/background-elements/bgelem5.png" alt="img">
         </div>
     </main>
 
