--- a/admin-seller-account-categories.html
+++ b/admin-seller-account-categories.html
@@ -371,10 +371,11 @@
                     </div>
                 </div>
             </div>
-        </div>
 
+            <img class="admbgel1" src="img/background-elements/bgelem9.png" alt="img">
+            <img class="admbgel2" src="img/background-elements/bgelem5.png" alt="img">
+        </div>
     </main>
-    
 
 
     <script src="js/lib/jquery.js"></script>
