--- a/admin-sellers-list.html
+++ b/admin-sellers-list.html
@@ -31,6 +31,16 @@
                         <li>
                             <a href="#">
                                 <span class="iconwrap">
+                                    <img src="img/admin/admin-sidebar-ic0.svg" alt="icon">
+                                </span>
+                                <span class="listtext">
+                                    Dashboard
+                                </span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <span class="iconwrap">
                                     <img src="img/admin/admin-sidebar-ic1.svg" alt="icon">
                                 </span>
                                 <span class="listtext">
@@ -51,6 +61,7 @@
                                 <li class="active"><a href="#">All Selers</a></li>
                                 <li><a href="#">Need to be approved</a></li>
                                 <li><a href="#">Whale sellers</a></li>
+                                <li><a href="#">Categories</a></li>
                             </ul>
                         </li>
                         <li>
@@ -385,6 +396,9 @@
                     </div>
                 </div>
             </div>
+
+            <img class="admbgel1" src="img/background-elements/bgelem9.png" alt="img">
+            <img class="admbgel2" src="img/background-elements/bgelem5.png" alt="img">
         </div>
     </main>
 
