--- a/my-account-add-card.html
+++ b/my-account-add-card.html
@@ -267,10 +267,10 @@
                                                 </div>
                                                 <div class="col-lg-6">
                                                     <div class="inputfield">
-                                                        <label>MM*</label>
+                                                        <label for="month">MM*</label>
                                                         <div class="generalselect">
                                                             <select class="customselect" name="category"
-                                                                data-placeholder="MM">
+                                                                data-placeholder="MM" id="month">
                                                                 <option></option>
                                                                 <option value="0">January</option>
                                                                 <option value="1">February</option>
@@ -296,8 +296,8 @@
                                                 </div>
                                                 <div class="col-lg-6">
                                                     <div class="inputfield">
-                                                        <input type="text" id="cvv" placeholder="000" required>
-                                                        <label for="ccv">CCV*</label>
+                                                        <input type="text" id="ccvcode" placeholder="000" required>
+                                                        <label for="ccvcode">CCV*</label>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-6">
@@ -340,10 +340,10 @@
                                                 </div>
                                                 <div class="col-lg-6">
                                                     <div class="inputfield">
-                                                        <label>State*</label>
+                                                        <label for="selsecttate">State*</label>
                                                         <div class="generalselect">
                                                             <select class="customselect" name="category"
-                                                                data-placeholder="State">
+                                                                data-placeholder="State" id="selsecttate">
                                                                 <option></option>
                                                                 <option value="0">CA</option>
                                                                 <option value="1">AL</option>
