--- a/seller-acc-add-promotion.html
+++ b/seller-acc-add-promotion.html
@@ -194,7 +194,7 @@
                                                         <div class="inputfield">
                                                             <div class="generalselect">
                                                                 <select class="customselect" name="category"
-                                                                    id="availability">
+                                                                    id="promtype">
                                                                     <option value="0">Discount for the second item in
                                                                         the
                                                                         check</option>
@@ -211,8 +211,8 @@
                                                     </div>
                                                     <div class="col-xl-3 col-lg-4">
                                                         <div class="inputfield inputfield__infobtn">
-                                                            <input type="text" id="length" placeholder="0" required="">
-                                                            <label for="length">Discount*
+                                                            <input type="text" id="length2" placeholder="0" required="">
+                                                            <label for="length2">Discount*
                                                             </label>
                                                             <div class="input-infobtn">%</div>
                                                         </div>
@@ -393,6 +393,8 @@
             </div>
         </div>
     </footer>
+
+
 
 
 
