--- a/admin-all-customers-sellerprofile.html
+++ b/admin-all-customers-sellerprofile.html
@@ -61,6 +61,7 @@
                                 <li><a href="#">All Selers</a></li>
                                 <li><a href="#">Need to be approved</a></li>
                                 <li><a href="#">Whale sellers</a></li>
+                                <li><a href="#">Categories</a></li>
                             </ul>
                         </li>
                         <li>
@@ -428,6 +429,9 @@
                     </div>
                 </div>
             </div>
+
+            <img class="admbgel1" src="img/background-elements/bgelem9.png" alt="img">
+            <img class="admbgel2" src="img/background-elements/bgelem5.png" alt="img">
         </div>
 
     </main>
@@ -448,8 +452,6 @@
             </div>
         </div>
     </div>
-
-
 
     <script src="js/lib/jquery.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
