--- a/admin-all-customers.html
+++ b/admin-all-customers.html
@@ -28,6 +28,16 @@
                 </div>
                 <div class="asminsidebar__body">
                     <ul class="adsidebarlist">
+                        <li>
+                            <a href="#">
+                                <span class="iconwrap">
+                                    <img src="img/admin/admin-sidebar-ic0.svg" alt="icon">
+                                </span>
+                                <span class="listtext">
+                                    Dashboard
+                                </span>
+                            </a>
+                        </li>
                         <li class="active">
                             <a href="#">
                                 <span class="iconwrap">
@@ -51,6 +61,7 @@
                                 <li><a href="#">All Selers</a></li>
                                 <li><a href="#">Need to be approved</a></li>
                                 <li><a href="#">Whale sellers</a></li>
+                                <li><a href="#">Categories</a></li>
                             </ul>
                         </li>
                         <li>
@@ -409,6 +420,9 @@
                     </div>
                 </div>
             </div>
+
+            <img class="admbgel1" src="img/background-elements/bgelem9.png" alt="img">
+            <img class="admbgel2" src="img/background-elements/bgelem5.png" alt="img">
         </div>
     </main>
 
