--- a/admin-all-sellerprofile-settings.html
+++ b/admin-all-sellerprofile-settings.html
@@ -60,6 +60,7 @@
                                 <li class="active"><a href="#">All Selers</a></li>
                                 <li><a href="#">Need to be approved</a></li>
                                 <li><a href="#">Whale sellers</a></li>
+                                <li><a href="#">Categories</a></li>
                             </ul>
                         </li>
                         <li>
@@ -285,6 +286,9 @@
                     </div>
                 </div>
             </div>
+
+            <img class="admbgel1" src="img/background-elements/bgelem9.png" alt="img">
+            <img class="admbgel2" src="img/background-elements/bgelem5.png" alt="img">
         </div>
     </main>
 
