--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -1166,8 +1166,12 @@
                     </div>
                 </div>
             </div>
+
+            <img class="admbgel1" src="img/background-elements/bgelem9.png" alt="img">
+            <img class="admbgel2" src="img/background-elements/bgelem5.png" alt="img">
         </div>
     </main>
+
 
     <script src="js/lib/jquery.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
@@ -1175,6 +1179,7 @@
     <script src="js/lib/sortable.min.js"></script>
     <script src="js/lib/popper.js"></script>
     <script src="js/lib/bootstrap.min.js"></script>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.25.3/moment.min.js"></script>
     <script
