--- a/admin-receipts.html
+++ b/admin-receipts.html
@@ -100,7 +100,6 @@
                     </ul>
                 </div>
             </aside>
-
             <div class="admincontent">
                 <div class="admincontent__head">
                     <div class="searchblock">
@@ -401,9 +400,11 @@
                     </div>
                 </div>
             </div>
+
+            <img class="admbgel1" src="img/background-elements/bgelem9.png" alt="img">
+            <img class="admbgel2" src="img/background-elements/bgelem5.png" alt="img">
         </div>
     </main>
-    
 
 
     <script src="js/lib/jquery.js"></script>
