--- a/checkout.html
+++ b/checkout.html
@@ -91,81 +91,6 @@
                                     <a href="#" class="chunfosect__abslink">To close <i
                                             class="fa-solid fa-xmark"></i></a>
                                 </div>
-
-                                <!-- <div class="shipping-addressform">
-                                    <form action="#">
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <div class="inputfield">
-                                                    <input type="text" id="fname" placeholder="First Name*">
-                                                    <label for="fname">First Name*</label>
-                                                </div>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <div class="inputfield">
-                                                    <input type="text" id="lname" placeholder="Last Name*">
-                                                    <label for="lname">Last Name*</label>
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-12">
-                                                <div class="inputfield">
-                                                    <input type="text" id="straddr" placeholder="Street address*">
-                                                    <label for="straddr">Street address*</label>
-                                                </div>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <div class="inputfield">
-                                                    <input type="text" id="fcity" placeholder="City*">
-                                                    <label for="fcity">City*</label>
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-3 col-md-6">
-                                                <div class="inputfield">
-                                                    <label for="fcity">State*</label>
-                                                    <div class="generalselect">
-                                                        <select class="customselect" name="category">
-                                                            <option value="0">CA</option>
-                                                            <option value="1">State 1</option>
-                                                            <option value="2">State 2</option>
-                                                            <option value="3">State 3</option>
-                                                            <option value="4">State 4</option>
-                                                        </select>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-3 col-md-6">
-                                                <div class="inputfield">
-                                                    <input type="text" id="zcode" placeholder="">
-                                                    <label for="zcode">Zip code*</label>
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-6 col-md-6">
-                                                <div class="inputfield">
-                                                    <input type="number" id="phonenum" placeholder="Phone number*">
-                                                    <label for="phonenum">Phone number*</label>
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-6">
-                                                <div class="inputfield">
-                                                    <input type="email" id="femail" placeholder="Email">
-                                                    <label for="femail">Email</label>
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-12">
-                                                <div class="inputfield">
-                                                    <div class="checkwrapper">
-                                                        <input type="checkbox" id="setaddr1">
-                                                        <label for="setaddr1">Set as my preferred delivery
-                                                            address</label>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-12">
-                                                <input class="greenbtn" type="submit" value="Save">
-                                            </div>
-                                        </div>
-                                    </form>
-                                </div> -->
                             </div>
                         </div>
 
@@ -515,8 +440,8 @@
                                 </div>
                             </div>
                             <div class="inputfield">
-                                <input type="number" id="city" placeholder="Phone number*">
-                                <label for="city">Phone number*</label>
+                                <input type="number" id="tel" placeholder="Phone number*">
+                                <label for="tel">Phone number*</label>
                             </div>
                             <div class="inputfield">
                                 <div class="checkwrapper">
