--- a/index.html
+++ b/index.html
@@ -479,6 +479,60 @@
             </div>
         </section>
 
+
+
+
+        <section class="infoblock">
+            <div class="container">
+                <div class="row g-0 align-items-center">
+                    <div class="col-lg-6">
+                        <div class="imgwrap">
+                            <img src="img/main/img.jpg" alt="img">
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="infoblock__textwrap">
+                            <p class="title">ESS GEZUNT</p>
+                            <p class="subtitle">
+                                From Our Family to Yours
+                            </p>
+                            <div class="descr">
+                                <p>
+                                    We are ordinary family people with a passion for eating healthy. Like you we search
+                                    for
+                                    those special products that are “good” for us and at the same time satisfy our
+                                    palette.
+                                    Like you we are forever reading labels to avoid those products that are not good for
+                                    us.
+                                </p>
+                                <p>
+                                    Our family decided to help you negotiate the complex world of eating healthy by
+                                    introducing this website. Here you will not only learn more about the latest trends
+                                    of
+                                    eating healthy, you will actually be able to view and purchase some of the products
+                                    with
+                                    an easy to negotiate platform. We hope that you continue to be healthy and, of
+                                    course,
+                                    Ess Gezunt!
+                                </p>
+                            </div>
+                            <a href="#">
+                                buy food
+                                <img src="img/main/btnarrow.svg" alt="arrow">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+
+
+
+
+
         <section class="recipesslider">
             <div class="container">
                 <div class="productsection__header">
