--- a/recipes-center-selected-recipe.html
+++ b/recipes-center-selected-recipe.html
@@ -133,7 +133,7 @@
         <section class="recipemainsect">
             <div class="container">
                 <div class="recipemainsectwrap">
-                    <img class="recipemainsect__bg" src="img/recipes/recipe-mainpic.png" alt="img">
+                    <img class="recipemainsect__bg" src="img/recipes/recipe-pic.png" alt="img">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="recipemainsect__descr">
